로그인 기능 구현 완료

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Users\\sdedu\\Desktop\\Spring\\gameProject","type":"PROJECT","hints":{"PROJECT_NAME":"gameProject"}},"com.puft:game:1.0.0"]]
